<resources>
    <string name="app_name">C^2</string>
    <string name="delete">DEL</string>
    <string name="division">/</string>
    <string name="multiplication">x</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="deleteTitle">Welcome to C^2</string>
    <string name="deleteDescription">Tap the delete button once to delete the last digit or tap and hold it to clear all.</string>
    <string name="converterTitle">Currency Converter</string>
    <string name="converterDescription">Slide up to open converter and slide down to close it.</string>
    <string name="internetError">You don\'t have internet connection. Try again later...</string>
    <string name="infoTitle">C^2 - Info</string>
    <string name="info">1. Tap the switch button at the center to switch between your base currency and your target currency.
        \n\n2. Tap the delete button once to delete the last digit or tap and hold it to clear all.
        \n\n3. Switch action doesn't work because of the Fixer Api free plan limitations :D.
        </string>
</resources>
